--- a/reference-implementations/AppGW-IAPIM-Func/bicep/config.yml
+++ b/reference-implementations/AppGW-IAPIM-Func/bicep/config.yml
@@ -1,8 +1,8 @@
-AZURE_LOCATION: 'westus2'
+AZURE_LOCATION: 'westeurope'
 RESOURCE_NAME_PREFIX: 'apimdemo'
 ENVIRONMENT_TAG: 'dev'
 DEPLOYMENT_NAME: 'ase-demo-deployment'
 VM_USERNAME: 'agent'
-ACCOUNT_NAME: 'repalce me in repo secrets'
-CICD_AGENT_TYPE: 'azuredevops'
+ACCOUNT_NAME: 'github.com/vzisiadis'
+CICD_AGENT_TYPE: 'none'
 CERT_TYPE: 'selfsigned'
